# Sistema-de-Segmentacion-de-Enfermedades-en-Hoja-de-Cafe

./: .gitignore  README.md  definicion_justificacion.md
docs/: AI-PIPELINE.md  ARCHITECTURE.md
notebooks/: Modelo_Proyecto_VC.ipynb  yolov8_coffee_leaf.ipynb
webapp/backend/: .env.template  Dockerfile  main.py  pyproject.toml
webapp/backend/src/services/: gemini.py  yolo.py
webapp/frontend/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
webapp/frontend/public/: manifest.json
webapp/frontend/src/: routeTree.gen.ts  styles.css
webapp/frontend/src/components/: AppHeader.tsx  CameraCapture.tsx  LoaderScreen.tsx  ResultScreens.tsx
webapp/frontend/src/components/ui/: button.tsx
webapp/frontend/src/lib/: api.ts  history.ts
webapp/frontend/src/routes/: __root.tsx  docs.tsx  history.tsx  index.tsx
