[project]
name = "coffee-leaf-ai-backend"
version = "0.1.0"
description = "Coffee Leaf AI — backend for coffee leaf disease segmentation"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "google-genai>=2.0.1",
    "python-dotenv>=1.2.2",
    "ultralytics>=8.3.0",
]
